@@ -123,7 +123,10 @@ namespace libtorrent {
 		static constexpr alert_category_t tracker_notification = 4_bit;
 
 		// Low level alerts for when peers are connected and disconnected.
-		static constexpr alert_category_t debug_notification = 5_bit;
+		static constexpr alert_category_t connect_notification = 5_bit;
+#if TORRENT_ABI_VERSION == 1
+		static constexpr alert_category_t TORRENT_DEPRECATED_MEMBER debug_notification = connect_notification;
+#endif
 
 		// Enables alerts for when a torrent or the session changes state.
 		static constexpr alert_category_t status_notification = 6_bit;
