@@ -1,3 +1,4 @@
+	* renamed debug_notification to connect_notification
 	* when updating listen sockets, only post alerts for new ones
 	* deprecate anonymous_mode_alert
 	* deprecated force_proxy setting (when set, the proxy is always used)
